# paybridge-notification-service

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  startup.rs
src/api/: routes.rs
src/domain/: mod.rs
src/domain/health/: routes.rs
src/domain/notification/: mod.rs  port.rs  routes.rs  service.rs
src/infrastructure/: config.rs  db.rs  mod.rs
src/infrastructure/mail/: mailhog.rs  mod.rs
