[package]
name = "insurance_claim_management_system"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"                                     # The main web framework for building HTTP APIs (routing, server, middleware)
serde = { version = "1", features = ["derive"] }    # Serialization/deserialization librarySSS
serde_json = "1"                                    # JSON support (parsing JSON, generating JSON responses)
