[package]
name = "paybridge_guard_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"                                     # The main web framework for building HTTP APIs (routing, server, middleware)
serde = { version = "1", features = ["derive"] }    # Serialization/deserialization librarySSS
serde_json = "1"                                    # JSON support (parsing JSON, generating JSON responses)

# PostgreSQL + async support
sqlx = { version = "0.7", features = ["runtime-async-std-native-tls", "postgres"] }

# Dotenv support
dotenvy = "0.15"

# Add these
tokio = { version = "1", features = ["full"] }      # Async runtime
anyhow = "1"                                        # Error handling
